# ROS-X-Project

./: README.md
Dashboard/: dashboard.html
Hydrostatics/: ROSX-Stability.xlsx
data_interfaces/: CMakeLists.txt  package.xml
data_interfaces/action/: RudderControl.action
data_interfaces/msg/: Dht.msg  MotorControl.msg  ProximityData.msg  Rudder.msg
indicator/: package.xml  setup.cfg  setup.py
indicator/indicator/: data_receiver.py
sensors/: package.xml  setup.py
sensors/sensors/: dht.py  gps.py  mpu6050.py  proximity.py
vessel_control/: package.xml  setup.cfg  setup.py
vessel_control/launch/: ros_project.launch.py
vessel_control/vessel_control/: rudder_control.py  serial_vessel_control.py
vessel_control/vessel_control/old/: motor_control.py  rudder_client.py  rudder_control.py
xros_vrx_simulation_files/data_interfaces/: CMakeLists.txt  package.xml
xros_vrx_simulation_files/data_interfaces/msg/: Actuators.msg  Poi.msg
xros_vrx_simulation_files/data_interfaces/srv/: AddPoi.srv  AddWaypoint.srv  (+3 more)
xros_vrx_simulation_files/launch_files/: package.xml  setup.py
xros_vrx_simulation_files/my_vessel_config/: README.md  my_components.xacro  my_components.yaml  my_thrusters.xacro  my_thrusters.yaml  my_wamv.urdf
xros_vrx_simulation_files/xros_automation/: package.xml  setup.cfg  setup.py
xros_vrx_simulation_files/xros_control/: package.xml  setup.cfg  setup.py
xros_vrx_simulation_files/xros_control/xros_control/: manual_operation_mode.py  mode.py  vessel_control.py
xros_vrx_simulation_files/xros_path_planning/: package.xml  setup.cfg  setup.py
(+4 files in other folders)
