<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xros_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="spk@todo.todo">spk</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>rclpy</test_depend>
  <test_depend>geometry_msgs.msg</test_depend>
  <test_depend>board</test_depend>
  <test_depend>pwmio</test_depend>
  <test_depend>adafruit_motor</test_depend>
  <test_depend>data_interfaces.msg</test_depend>
  <test_depend>serial</test_depend>
  <test_depend>sensor_msgs.msg</test_depend>
  <test_depend>enum</test_depend>
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
